--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
 }
 
 .text-title{
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Cairo', sans-serif;
   letter-spacing: .3rem;
   text-transform: uppercase;
 }
